@@ -1,3 +1,6 @@
+2003-03-09
+    Support for shoutcast source protocol added.
+
 2003-03-08
     Started implementing generic admin interface. Supports (so far): 
     - dynamic configuration of mount fallbacks
